fix overflow

--- a/frontend/src/app/landing/landing.component.scss
+++ b/frontend/src/app/landing/landing.component.scss
@@ -1,12 +1,8 @@
-*, body, html {
-  overflow: hidden !important;
-}
-*:host {
+:host {
   display: flex;
   flex-direction: column;
   justify-content: center;
   height: auto;
-  overflow: hidden !important;
 }
 
 .nav-link {
