--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -50,12 +50,13 @@ $font-family-sans-serif: Inter;
 
 html {
   font-size: 62.5%;
+  overflow: hidden !important;
 }
 body {
   color: #000;
   font-size: 1.6rem;
   font-weight: 400;
-  overflow-y: hidden !important;
+  overflow: hidden !important;
 }
 .text-yellow {
   color: #ffc107 !important;
